--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.0",
+    "@angular/cdk": "^16.1.6",
     "@angular/common": "~16.1.0",
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
     "@angular/forms": "~16.1.0",
+    "@angular/material": "^16.1.6",
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
     "@nx/angular": "16.6.0",
+    "@types/uuid": "^9.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -44,6 +48,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.0",
     "cypress": "^12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -53,7 +58,9 @@
     "jest-preset-angular": "~13.1.0",
     "nx": "16.6.0",
     "nx-cloud": "latest",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
