--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": ".-serve-me-a-cocktail",
+  "name": "serve-me-a-cocktail",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
@@ -12,7 +12,7 @@
         "{options.outputPath}"
       ],
       "options": {
-        "outputPath": "dist/.-serve-me-a-cocktail",
+        "outputPath": "dist/serve-me-a-cocktail",
         "index": "./src/index.html",
         "main": "./src/main.ts",
         "polyfills": [
@@ -60,10 +60,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": ".-serve-me-a-cocktail:build:production"
+          "browserTarget": "serve-me-a-cocktail:build:production"
         },
         "development": {
-          "browserTarget": ".-serve-me-a-cocktail:build:development"
+          "browserTarget": "serve-me-a-cocktail:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": ".-serve-me-a-cocktail:build"
+        "browserTarget": "serve-me-a-cocktail:build"
       }
     },
     "lint": {
@@ -105,7 +105,7 @@
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": ".-serve-me-a-cocktail:build"
+        "buildTarget": "serve-me-a-cocktail:build"
       }
     }
   }
