--- a/package.json
+++ b/package.json
@@ -9,61 +9,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.1.0",
-    "@angular/cdk": "^16.1.6",
-    "@angular/common": "~16.1.0",
-    "@angular/compiler": "~16.1.0",
-    "@angular/core": "~16.1.0",
-    "@angular/forms": "~16.1.0",
-    "@angular/material": "^16.1.6",
-    "@angular/platform-browser": "~16.1.0",
-    "@angular/platform-browser-dynamic": "~16.1.0",
-    "@angular/router": "~16.1.0",
-    "@nx/angular": "16.6.0",
+    "@angular/animations": "17.0.4",
+    "@angular/cdk": "17.0.1",
+    "@angular/common": "17.0.4",
+    "@angular/compiler": "17.0.4",
+    "@angular/core": "17.0.4",
+    "@angular/forms": "17.0.4",
+    "@angular/material": "17.0.1",
+    "@angular/platform-browser": "17.0.4",
+    "@angular/platform-browser-dynamic": "17.0.4",
+    "@angular/router": "17.0.4",
+    "@babel/traverse": "^7.23.4",
+    "@nx/angular": "17.1.3",
     "@types/uuid": "^9.0.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "axios": "^1.6.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.5.3",
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.0",
-    "@angular-devkit/core": "~16.1.0",
-    "@angular-devkit/schematics": "~16.1.0",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "~16.1.0",
-    "@angular/language-service": "~16.1.0",
+    "@angular-devkit/build-angular": "17.0.3",
+    "@angular-devkit/core": "17.0.3",
+    "@angular-devkit/schematics": "17.0.3",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.4",
+    "@angular/language-service": "17.0.4",
     "@faker-js/faker": "^8.0.2",
-    "@nx/cypress": "16.6.0",
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/jest": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.6.0",
-    "@nx/web": "16.6.0",
-    "@nx/workspace": "16.6.0",
-    "@schematics/angular": "~16.1.0",
+    "@nx/cypress": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/web": "17.1.3",
+    "@nx/workspace": "17.1.3",
+    "@schematics/angular": "17.0.3",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "autoprefixer": "^10.4.0",
-    "cypress": "^12.16.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~13.1.0",
-    "nx": "16.6.0",
-    "nx-cloud": "latest",
-    "postcss": "^8.4.5",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "autoprefixer": "^10.4.14",
+    "cypress": "^13.0.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.13.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "13.1.4",
+    "nx": "17.1.3",
+    "postcss": "^8.4.31",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
+    "typescript": "5.2.2",
     "uuid": "^9.0.0"
   }
 }
